--- a/static/css/main.css
+++ b/static/css/main.css
@@ -275,8 +275,8 @@ header {
   padding: 5px 15px;
 }
 
-#map {
-  height: 500px;
+#mapid {
+  height: 500px!important;
 }
 
 .leaflet-popup-content h3 {
